add unit map function, calculates players positions and remove unnecessary classes

--- a/backend/Server/GamePlayer/GamePlayer.csproj
+++ b/backend/Server/GamePlayer/GamePlayer.csproj
@@ -117,5 +117,8 @@
   <ItemGroup>
     <None Include="Resources\close.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refresh.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
