implement command deign pattern, able to move through map, able undo last move, issue: fix receiver Undo method

--- a/backend/Server/GamePlayer/GamePlayer.csproj
+++ b/backend/Server/GamePlayer/GamePlayer.csproj
@@ -120,5 +120,11 @@
   <ItemGroup>
     <None Include="Resources\refresh.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\undo %282%29.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\undo %282%291.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
